--- a/app/views/redditList.html
+++ b/app/views/redditList.html
@@ -9,7 +9,7 @@
 	</div>
 	<!-- <div class="col-md-4">{{ item.data.thumbnail }}</div> -->
 	<a class="col-md-4" href="{{ item.data.url }}">
-		<img data-ng-if="item.data.thumbnail" src="{{ item.data.thumbnail }}" alt="">
+		<img data-ng-if="item.data.thumbnail" data-ng-src="{{ item.data.thumbnail }}" alt="">
 		<span data-ng-if="!item.data.thumbnail">jump to reddit</span>
 	</a>
 </div>
