--- a/app/views/redditList.html
+++ b/app/views/redditList.html
@@ -1,4 +1,23 @@
 
+<!-- finish this select box - default selected item or simple title -->
+<div class="row">
+	<div class="col-md-6 col-md-offset-6">
+		<div class="form-inline">
+			<div class="form-group">
+				<select class="form-control">
+				  <option>sort by</option>
+				  <option>date added</option>
+				  <option>something</option>
+				</select>
+			</div>
+			<div class="form-group">
+				<input type="text" class="form-control" placeholder="type to search">
+			</div>	
+		</div>
+	</div>
+</div>
+
+
 <div class="row" data-ng-repeat="item in reddits">
 	<div class="col-md-1">{{$index + 1}}</div>
 	<a href="#/redditList/item/{{$index}}"><div class="col-md-3">{{ item.data.title }}</div></a>
