--- a/app/views/redditList.html
+++ b/app/views/redditList.html
@@ -1,21 +1,19 @@
 
 <!-- finish this select box - default selected item or simple title -->
 <div class="row">
-	<div class="col-md-6 col-md-offset-6">
-		<div class="form-inline">
-			<div class="form-group">
-				<select class="form-control">
-				  <option>sort by</option>
-				  <option>date added</option>
-				  <option>something</option>
-				</select>
-			</div>
-			<div class="form-group">
-				<input type="text" class="form-control" placeholder="type to search">
-			</div>	
-		</div>
+	<div class="col-md-3 pad0">
+    	<select class="form-control">
+		  <option>sort by</option>
+		  <option>date added</option>
+		  <option>something</option>
+		</select>
+	</div>
+	<div class="col-md-3 pad0">
+    	<input type="text" class="form-control" placeholder="search..">
 	</div>
 </div>
+
+<div class="test"></div>
 
 
 <div class="row" data-ng-repeat="item in reddits">
