--- a/app/views/redditList.html
+++ b/app/views/redditList.html
@@ -1,19 +1,19 @@
 
 <!-- finish this select box - default selected item or simple title -->
-<div class="row">
-	<div class="col-md-3 pad0">
+<div class="row mb20">
+	<div class="col-md-3 col-md-offset-6 padLR5">
     	<select class="form-control">
 		  <option>sort by</option>
 		  <option>date added</option>
 		  <option>something</option>
 		</select>
 	</div>
-	<div class="col-md-3 pad0">
+	<div class="col-md-3 padLR5">
     	<input type="text" class="form-control" placeholder="search..">
 	</div>
 </div>
 
-<div class="test"></div>
+<div id="test"></div>
 
 
 <div class="row" data-ng-repeat="item in reddits">
