add dynamic header title

--- a/app/views/header-menu.html
+++ b/app/views/header-menu.html
@@ -5,5 +5,5 @@
     <li ui-sref-active="active"><a data-ui-sref="contact">contact</a></li>
     <li ui-sref-active="active"><a data-ui-sref="reddit-list">reddit list</a></li>
   </ul>
-  <h3 class="text-muted">angular-reddit stuff</h3>
+  <h3 class="text-muted">{{stateName}}</h3>
 </div>
